# blog

./: .gitignore  README  about.md  blag.cabal  code.md  default.nix  index.html  portfolio-data.md  portfolio-intel.md  portfolio-js.md  portfolio.md  site.hs  stack.yaml  update-blog
css/: normalize.css  style.css
logs/: .gitignore  README  filter  gen  get  month  referrers  remove-nonhumans  sample-logs  stats
posts/: 2013-02-01-flush-stdin.md  2013-02-28-cloning-setups.md  2014-09-23-duplicating-streams-in-nix-and-pointful-shell-programming.md  2014-10-08-glorifying-irc.md  2014-12-07-beta-reduction-of-metaprograms.md  2015-05-18-a-simple-exercise-in-lambda-calculus.md  2015-05-22-adding-context-to-window-managers-keybinds.md  2015-08-01-identity-relation-equivalence-function.md  2015-08-10-master-version-controller.md  2015-12-16-python-cannot-even-uniq.md  2016-01-06-finite-groups-e-an-for-every-a.md  2016-01-26-hardcoding-host-ip-address-in-putty.md  2016-09-13-i3lock-password-dumping-patch.md  2017-04-02-customized-rsync-for-vagrant.md  2017-05-12-bootstrapping-chef-with-cloud-init-and-omnibus.md  2017-05-24-simplest-posix-acl-example.md  2017-09-26-how-to-create-a-process-without-environment-variables.md  2017-10-11-building-docker-containers-with-nixos.md  2018-03-08-what-software-do-my-computers-run.md  2020-11-15-compiling-hakyll-with-nix.md  2021-04-01-grepping-scala-transitive-dependencies.md
templates/: default.html  post-list.html  post.html
