name:                blag
version:             0.1.0.0
license:             MIT
build-type:          Simple
cabal-version:       >=1.20

executable site
  hs-source-dirs:      .
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , hakyll
                     , process
